--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
       <div class="row">
       <div class="about__description" data-aos="fade-down" data-aos-delay="1500">
         <p>
-             I am taking Bachelor of Science in Information Technology with an
-            Specialization of Web Development.I'm looking for work as a web
-            designer so I can use my creativity and expertise to construct
-            clients' websites that stand out.
+            I am taking a Bachelor of Science in Information Technology with a 
+          specialization in Web Development. I'm looking for work as a web 
+          designer so I can use my creativity and expertise to construct 
+          clients' websites that stand out.
         </p>
       </div>
       <div data-aos="zoom-in" data-aos-delay="1000">
