--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <img
             data-aos="fade-up"
             data-aos-delay="500"
-            src="/assets/booth.png"
+            src="/assets/wordpress.svg"
             class="booth"
             alt=""
           />
